<resources>
    <string name="app_name">环境监测</string>

    <string name="empty"></string>

    <!--标题栏-->
    <string name="title_name">安全监测</string>

    <!-- 页面名称 -->
    <string name="main_navigation_home">主页</string>
    <string name="main_navigation_admin">管理员</string>
    <string name="main_navigation_user">我的</string>

    <!-- 登录页 -->
    <string name="btn_login">登录</string>
    <string name="hint_username">请输入用户名</string>
    <string name="hint_pwd">请输入密码</string>
    <string name="tv_admin_register">管理员注册</string>
    <string name="tv_register">新用户注册</string>

    <!-- 普通用户注册页 -->
    <string name="hint_pwd_again">请确认密码</string>
    <string name="hint_phonenumber">请输入手机号</string>
    <string name="hint_email">请输入邮箱</string>
    <string name="register">注册</string>

    <!--管理员注册-->
    <string name="next">下一步</string>
    <string name="hint_area_id">区域代码</string>
    <string name="hint_area_name">区域名称</string>
    <string name="hint_company_name">单位名称</string>
    <string name="hint_admin_name">管理员用户名</string>
    <string name="hint_reg_code">注册码</string>


    <!--管理员界面-->
    <string name="node_regist">节点注册</string>
    <string name="mess_config">信息配置</string>
    <string name="user_manage">用户管理</string>

    <!--我的界面-->
    <string name="name">用户名</string>
    <string name="phone">手机号码</string>
    <string name="email">邮箱</string>
    <string name="change_password">修改密码</string>
    <string name="logout">注销账号</string>
    <string name="exit">退出</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_get_client">GetClient</string>
    <string name="filter_vcode">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>


    <!--修改手机号、邮箱-->
    <string name="tel_old">已绑手机号</string>
    <string name="tel_new">修改手机号</string>
    <string name="mail_old">已绑邮箱</string>
    <string name="mail_new">修改邮箱</string>
    <string name="confirm">确定修改</string>

    <!--修改密码-->
    <string name="pwd_old">旧密码</string>
    <string name="pwd_new">新密码</string>
    <string name="confirm_pwd">确认密码</string>
</resources>
