<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:textColor="@color/base_bg"
        android:text="@string/tv_admin_register"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
    <TextView
        android:id="@+id/t_username"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#ffffff"
        android:paddingLeft="16dp"
        android:singleLine="true"
        android:textSize="@dimen/text_middle_size" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="#cccccc" />

    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/white"
        android:drawablePadding="16dp"
        android:hint="@string/hint_pwd"
        android:inputType="textPassword"
        android:paddingLeft="16dp"
        android:singleLine="true"
        android:textSize="@dimen/text_middle_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="#cccccc" />

    <EditText
        android:id="@+id/et_pwd_again"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/white"
        android:drawablePadding="16dp"
        android:hint="@string/hint_pwd_again"
        android:inputType="textPassword"
        android:paddingLeft="16dp"
        android:singleLine="true"
        android:textSize="@dimen/text_middle_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="#cccccc" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#ffffff"
        android:hint="@string/hint_phonenumber"
        android:inputType="phone"
        android:paddingLeft="16dp"
        android:singleLine="true"
        android:textSize="@dimen/text_middle_size" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="#cccccc" />
    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#ffffff"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:paddingLeft="16dp"
        android:singleLine="true"
        android:textSize="@dimen/text_middle_size" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="#cccccc" />

    <Button
        android:id="@+id/reg_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/btn_selector"
        android:text="@string/register"
        android:textColor="#ffffff" />

</LinearLayout>